homepagina buttons toegevoegd

--- a/ProjectTreinritten/Views/Shared/_Layout.cshtml
+++ b/ProjectTreinritten/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
                 <div class="col-10">
                     <nav>
                         <ul>
-                            <li><a asp-action="Inloggen"><div>Aanmelden/Registreren</div></a></li>
+                            <li><a asp-action="Registreer"><div>Registreren</div></a></li>
+                            <li><a asp-action="Inloggen"><div>Aanmelden</div></a></li>
                             <li>
                                 <a asp-action="Winkelkar">
                                     <img src="~/images/cart.png" id="winkelkar" />
