--- a/ProjectTreinritten/Views/Trein/Index.cshtml
+++ b/ProjectTreinritten/Views/Trein/Index.cshtml
@@ -13,38 +13,35 @@
 <div class="container">
     <div class="row">
         <div class="col-6">
-            <img class="bannerImg" src="~/images/banner1.png" />
+            <a asp-action="Boeken">
+                <img class="bannerImg" src="~/images/banner1.png" />
+            </a>
+
         </div>
         <div class="col-6">
-            <img class="bannerImg" src="~/images/banner2.png" />
+            <a asp-action="Boeken">
+                <img class="bannerImg" src="~/images/banner2.png" />
+            </a>
         </div>
     </div>
 </div>
-<div id="banner1">
-    <div class="container ">
-        <div class=" row">
-            <div class="col-4">
-                <img class="promImg" src="~/images/prom1.png" />
-            </div>
-            <div class="col-4">
-                <img class="promImg" src="~/images/prom2.png" />
-            </div>
-            <div class="col-4">
-                <img class="promImg" src="~/images/prom3.png" />
-            </div>
-        </div>
-    </div>
-</div>
+
 <div class="container">
     <div class="row">
         <div class="col-4">
-            <img src="~/images/knop1.png" />
+            <a asp-action="Registreer">
+                <img class="bannerImg" src="~/images/knop1.png" />
+            </a>
         </div>
         <div class="col-4">
-            <img src="~/images/knop2.png" />
+            <a asp-action="Over">
+                <img class="bannerImg" src="~/images/knop2.png" />
+            </a>
         </div>
         <div class="col-4">
-            <img src="~/images/knop3.png" />
+            <a asp-action="Boeken">
+                <img class="bannerImg" src="~/images/knop3.png" />
+            </a>
         </div>
     </div>
 </div>
