Ruwe content voor over-pagina toegevoegd

--- a/ProjectTreinritten/Views/Trein/Index.cshtml
+++ b/ProjectTreinritten/Views/Trein/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Index";
-}
-<div id="background-home">
+﻿<div id="background-home">
     <div class="container ">
         <div class="row">
             <div class="col-12">
