--- a/ProjectTreinritten/Views/Trein/Over.cshtml
+++ b/ProjectTreinritten/Views/Trein/Over.cshtml
@@ -1,7 +1,24 @@
-﻿
-@{
-    ViewData["Title"] = "Over";
-}
-
-<h2>Dit is de over pagina</h2>
+﻿<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h1>Over</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <p>Dit is een faketekst. Alles wat hier staat is slechts om een indruk te geven van het grafische effect van tekst op deze plek. Wat u hier leest is een voorbeeldtekst. Deze wordt later vervangen door de uiteindelijke tekst, die nu nog niet bekend is. De faketekst is dus een tekst die eigenlijk nergens over gaat. Het grappige is, dat mensen deze toch vaak lezen. Zelfs als men weet dat het om een faketekst gaat, lezen ze toch door.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6">
+            <img class="profielfoto" src="~/images/gilles.jpeg" />
+            <h5>Gilles Verstraeten</h5>
+        </div>
+        <div class="col-6">
+            <img class="profielfoto" src="~/images/pieter.jpg" />
+            <h5>Pieter Debaere</h5>
+        </div>
+    </div>
+</div>
+</div>
 
