--- a/ProjectTreinritten/wwwroot/css/Treinritten.css
+++ b/ProjectTreinritten/wwwroot/css/Treinritten.css
@@ -23,6 +23,12 @@
     text-shadow: 1px 0 0 #fff, -1px 0 0 #fff, 0 1px 0 #fff, 0 -1px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
 }
 
+.profielfoto{
+    height:400px;
+    width:400px;
+    border-radius:50%;
+}
+
 .bannerImg{
     padding-top:20px;
     padding-bottom:20px;
