klaarzeten voor pieter

--- a/ProjectTreinritten/Views/Trein/Boeken.cshtml
+++ b/ProjectTreinritten/Views/Trein/Boeken.cshtml
@@ -5,10 +5,13 @@
 }
 
 <h2>Boeken</h2>
+<div class="container">
+    <form>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+    </form>
+</div>
+
+<!--
 <table class="table">
     <thead>
         <tr>
@@ -40,7 +43,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@* @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Klasse)
@@ -75,3 +78,5 @@
 }
     </tbody>
 </table>
+    *@
+-->
