--- a/ProjectTreinritten/Views/Trein/Boeken.cshtml
+++ b/ProjectTreinritten/Views/Trein/Boeken.cshtml
@@ -21,7 +21,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Eindpunt" class="control-label"></label>
-                    <select asp-for="Eindpunt" class="form-control" asp-items="ViewBag.StationId"  onchange="setHotels()" id="Eindpunt">
+                    <select asp-for="Eindpunt" class="form-control" asp-items="ViewBag.StationId" onchange="setHotels()" id="Eindpunt">
                         <option value="0">Gelieve een station te selecteren</option>
                     </select>
                     <span asp-validation-for="Eindpunt" class="text-danger"></span>
@@ -169,11 +169,55 @@
             </form>
         </div>
     </div>
-
-    <div>
-        <a asp-action="Index">Back to List</a>
-    </div>
 </div>
+
+@if (Model != null)
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Ritten)
+                </th>
+                
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Ritten)
+            {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.VertrekStationId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.VertrekStation)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AankomstStationId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AankomstStation)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.VertrekUur)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AankomstUur)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Duur)
+                </td>
+                
+                <td>
+                    <a asp-action="Select" asp-route-b="@Model">Select</a>                    
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+}
+
 
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/resources/demos/style.css">
@@ -201,7 +245,7 @@
     }
     //functie uitvoeren als pagina laad zodat er maar voor één persoon inputvelden zichtbaar zijn
     changeVelden();
-   
+
     const removeSelectedStation = () => {
         $('#Eindpunt option').each(function (index, element) {
             if (element.value != $("#Vertrekpunt").children("option:selected").val() || element.value == 0) {
