--- a/ProjectTreinritten/Views/Trein/Boeken.cshtml
+++ b/ProjectTreinritten/Views/Trein/Boeken.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Boeken";
 }
+
 <div class="container">
     <h2>Boeken</h2>
 
@@ -10,7 +11,7 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Boeken">
+            <form asp-action="KiezenRit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Vertrekpunt" class="control-label"></label>
